--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <div>
-	<img id="cat" src="https://lh3.ggpht.com/nlI91wYNCrjjNy5f-S3CmVehIBM4cprx-JFWOztLk7vFlhYuFR6YnxcT446AvxYg4Ab7M1Fy0twaOCWYcUk=s0#w=640&h=426"/>
+	<div id="cat">
+		<h1> Cat_1 </h1>
+		<img src="https://lh3.ggpht.com/nlI91wYNCrjjNy5f-S3CmVehIBM4cprx-JFWOztLk7vFlhYuFR6YnxcT446AvxYg4Ab7M1Fy0twaOCWYcUk=s0#w=640&h=426"/>
+		<h3 id = "cat1counter">0</h3>
+	</div>
+	<div id="cat2">
+		<h1> Cat_2 </h1>
+		<img src="https://lh3.ggpht.com/kixazxoJ2ufl3ACj2I85Xsy-Rfog97BM75ZiLaX02KgeYramAEqlEHqPC3rKqdQj4C1VFnXXryadFs1J9A=s0#w=640&h=496"/>
+		<h3 id = "cat2counter">0</h3>
+	</div>
 </div>
-
 <script>
-	let elem = document.getElementById('cat');
+	let cat1 = document.getElementById('cat');
 	let counter = 0;
-	elem.addEventListener('click', function(){
+	cat1.addEventListener('click', function(){
 		counter++;
-		console.log(counter);
+		document.getElementById('cat1counter').innerHTML = counter;
 	}, false);
+
+	let cat2 = document.getElementById('cat2');
+	let counter2 = 0;
+	cat2.addEventListener('click', function(){
+		counter2++;
+		document.getElementById('cat2counter').innerHTML = counter2;
+	}, false);
+
 </script>
