--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+<div id = "navbar">
+	<button id = "c1">Cat 1</button>
+	<button id = "c2">Cat 2</button>
+	<button id = "c3">Cat 3</button>
+	<button id = "c4">Cat 4</button>
+	<button id = "c5">Cat 5</button> 
+</div>
+
 <div>
-	<div id = "navbar">
-		<h2 id = "c1">Cat 1</h2> <h2 id = "c2">Cat 2</h2> <h2 id = "c3">Cat 3</h2> <h2 id = "c4">Cat 4</h2> <h2 id = "c5">Cat 5</h2> 
-	</div>
 	<div id="cat1">
 		<h1> Cat_1 </h1>
 		<img src="https://lh3.ggpht.com/nlI91wYNCrjjNy5f-S3CmVehIBM4cprx-JFWOztLk7vFlhYuFR6YnxcT446AvxYg4Ab7M1Fy0twaOCWYcUk=s0#w=640&h=426"/>
