--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
 	<div id="cat-count"></div>
 	<img id="cat-img" src="" alt="cat">
 </div>
-
+<input id="adminActivate" type="submit" value="Admin">
+<div id="adminPanel">
+	<input id="catName" type="text" placeholder="Name">
+	<input id="catUrl" type="text" placeholder="URL">
+	<input id="catClicks" type="text" placeholder="Clicks">
+	<input id="adminCancel" type="submit" value="Cancel">
+	<input id="adminSave" type="submit" value="Save">
+<div>
 <script src = "app.js"></script>
