--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </div>
 <input id="adminActivate" type="submit" value="Admin">
 <div id="adminPanel">
-	<input id="catName" type="text" placeholder="Name">
-	<input id="catUrl" type="text" placeholder="URL">
-	<input id="catClicks" type="text" placeholder="Clicks">
+	<input id="catName" type="text" placeholder="Name"><br>
+	<input id="catUrl" type="text" placeholder="URL"><br>
+	<input id="catClicks" type="text" placeholder="Clicks"><br>
 	<input id="adminCancel" type="submit" value="Cancel">
 	<input id="adminSave" type="submit" value="Save">
 <div>
